; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_workqueue.c_workq_deallocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_workqueue.c_workq_deallocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.workqueue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.workqueue*)* @workq_deallocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @workq_deallocate(%struct.workqueue* %0) #0 {
  %2 = alloca %struct.workqueue*, align 8
  store %struct.workqueue* %0, %struct.workqueue** %2, align 8
  %3 = load %struct.workqueue*, %struct.workqueue** %2, align 8
  %4 = getelementptr inbounds %struct.workqueue, %struct.workqueue* %3, i32 0, i32 0
  %5 = call i64 @os_ref_release_relaxed(i32* %4)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.workqueue*, %struct.workqueue** %2, align 8
  %9 = call i32 @workq_destroy(%struct.workqueue* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @os_ref_release_relaxed(i32*) #1

declare dso_local i32 @workq_destroy(%struct.workqueue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
